--- a/findly-builder/src/app/components/dashboard/dashboard.component.html
+++ b/findly-builder/src/app/components/dashboard/dashboard.component.html
@@ -236,7 +236,7 @@
                             <div class="table_header row m-0">
                                 <div class="col-10 header-title pl-0">{{'metrics.dash_board_view.Searched_Intent'|
                                     translate}}</div>
-                                <div class="col-2 header-title text-right" (click)="sortByApi('TotalSearchesStats','count')">
+                                <div class="col-2 header-title text-right" (click)="sortByApi('MostSearchedQuries','count')">
                                     <span class="d-flex align-items-center flex-column mr-1">
                                         <img src="assets/icons/caretDown.svg"  (click)="getSortIconVisibility('count','asc')" class="sortImg downArrow">
                                         <img src="assets/icons/caretDown.svg" (click)="getSortIconVisibility('count','asc')" class="sortImg upArrow">
