--- a/findly-builder/src/app/components/search-insights/search-insights.component.html
+++ b/findly-builder/src/app/components/search-insights/search-insights.component.html
@@ -32,7 +32,7 @@
                             <img src="assets/icons/search_gray.svg" class="search-icon">
                         </div>                        -->
                         <div class="kr-sg-input-search">
-                            <input type="text" placeholder="Search" class="input-search" [ngClass]="{'pl-33':!searchSources,'pl-2':searchSources}" autocomplete="off" [(ngModel)]="searchSources" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
+                            <input type="text" placeholder="Search" class="input-search" [ngClass]="{'pl-33':!searchSources,'pl-2':searchSources}" autocomplete="off" [(ngModel)]="searchSources" (keyup)="sortAnalytics(null,null,null,null,searchSources,'search')" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
                                 (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'" (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'">
                             <img [src]="searchImgSrc" class="search-icon" *ngIf="!searchSources">
                             <img class="close-icon" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':searchSources}" (click)="searchSources='';">
