--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -993,6 +993,8 @@
           <div class="customScript">
             <div class="kr-sg-input-text-area">
               <div class="label-text">&lt;/&gt;{{'workbench.painless' | translate}}</div>
+              <div class="clear">
+              <span (click)="newMappingObj.custom_script.defaultValue.script=''">Clear</span></div>
               <textarea placeholder="{{'workbench.please_enter_script' | translate}}" class="input- d-none"
                 (keyup)="
                   addCustomScript(
