--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -17452,3 +17452,33 @@ display: block;
 .no-templates-defined-full-results-container{
     display: none;
 }
+
+.scroll-top-container{
+    position: fixed;
+    bottom: 44px;
+    width: 100%;
+    left: 0;
+    display: flex;
+    align-items: start;
+    justify-content: left;
+    z-index: 1;
+    display: none;
+}
+.scroll-top-container .title-scroll-top{
+    background: #ECFFFF;
+    border: 1px solid #AEDCDC;
+    box-sizing: border-box;
+    border-radius: 10px;
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 12px;
+    color: #009999;
+    padding: 5px 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+.scroll-top-container .title-scroll-top img{
+    margin-right: 5px;
+}
