--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -16040,6 +16040,7 @@ a.tile-heading{
     border-radius: 4px;
     box-sizing: border-box;
     padding: 15px 12px;
+    object-fit: contain;
 }
 .template-3-grid-list .grid-data-item .inner-content-list .title-item {
     font-weight: normal;
@@ -16110,6 +16111,7 @@ a.tile-heading{
     border-radius: 4px;
     padding: 15px;
     text-align: left;
+    object-fit: contain;
 }
 .template-3-carousel-list .carousel .slide .inner-content-list .heading-text {
     font-weight: 600;
@@ -16540,6 +16542,7 @@ a.tile-heading{
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
     border-radius: 4px;
     padding: 12px;
+    object-fit: contain;
 }
 .template-4-grid-list .grid-data-item .inner-content-list .image-with-title {
     display: flex;
@@ -16578,6 +16581,7 @@ a.tile-heading{
     box-shadow: 0px 0px 5px rgba(0,0,0,0.1);
     border-radius: 4px;
     padding: 15px;
+    object-fit: contain;
 }
 .template-4-carousel-list .carousel .slide .inner-content-list .image-with-title {
     display: flex;
@@ -16628,7 +16632,7 @@ a.tile-heading{
     width: 50%;
 }
 .template-5-grid-list .grid-data-item .inner-content-list img{
-    height: 118px;
+    height: 120px;
 }
 .template-5-grid-list .grid-data-item .inner-content-list {
     box-sizing: border-box;
@@ -16641,7 +16645,8 @@ a.tile-heading{
     background: #FFFFFF;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
     border-radius: 4px;
-    height: 118px;
+    height: 120px;
+    object-fit: contain;
 }
 
 /* Template 6*/
@@ -16687,11 +16692,12 @@ a.tile-heading{
     box-shadow: 0px 0px 5px rgba(0,0,0,0.1);
     border-radius: 4px;
     padding: 8px;
+    object-fit: contain;
 }
 .template-5-carousel-list .carousel .slide .inner-content-list img {
     width: 100%;
     float: none;
-    height: 118px;
+    height: 120px;
 }
 
 /* Template 6 */
@@ -16703,6 +16709,7 @@ a.tile-heading{
     box-shadow: 0px 0px 80px rgba(0,0,0,0.07), 0px 0px 10.0172px rgba(0,0,0,0.035);
     border-radius: 8px;
     padding: 15px;
+    object-fit: contain;
 }
 .template-6-carousel-list .carousel .slide .inner-content-list .title-main {
     font-weight: 600;
@@ -16760,6 +16767,7 @@ a.tile-heading{
     box-shadow: 0px 0px 80px rgba(0,0,0,0.07), 0px 0px 10.0172px rgba(0,0,0,0.035);
     border-radius: 8px;
     padding: 10px;
+    object-fit: contain;
     }
     .template-6-grid-list .grid-data-item .inner-content-list .heading-main {
     font-weight: 600;
@@ -16819,9 +16827,10 @@ a.tile-heading{
     border-radius: 8px;
     width: 100%;
     min-height: 250px;
+    object-fit: contain;
 }
 .template-7-grid-list .grid-data-item .inner-content-list .main-img-block img{
-    height: 118px;
+    height: 120px;
 }
 .template-7-grid-list .grid-data-item .inner-content-list .main-img-block {
     padding: 0;
@@ -16835,7 +16844,7 @@ a.tile-heading{
     justify-content: center;
     margin-bottom: 16px;
     border: 10px solid #fff;
-    height: 118px;
+    height: 120px;
 }
 .template-7-grid-list .grid-data-item .inner-content-list .heading- {
     font-weight: bold;
@@ -16866,6 +16875,7 @@ a.tile-heading{
     border-radius: 8px;
     width: 100%;
     min-height: 250px;
+    object-fit: contain;
 }
 .template-7-carousel-list .carousel .slide .inner-content-list .main-img-block {
     padding: 0;
@@ -16930,9 +16940,10 @@ a.tile-heading{
     border-radius: 8px;
     width: 100%;
     min-height: 280px;
+    object-fit: contain;
 }
 .template-9-grid-list .grid-data-item .inner-content-list .main-img-block img{
-    height: 118px;
+    height: 120px;
 }
 .template-9-grid-list .grid-data-item .inner-content-list .main-img-block {
     padding: 0;
@@ -16946,7 +16957,7 @@ a.tile-heading{
     justify-content: center;
     margin-bottom: 16px;
     border: 10px solid #fff;
-    height: 118px;
+    height: 120px;
 }
 .template-9-grid-list .grid-data-item .inner-content-list .heading- {
     font-weight: bold;
@@ -17481,4 +17492,12 @@ display: block;
 }
 .scroll-top-container .title-scroll-top img{
     margin-right: 5px;
+}
+.data-body-sec .carousel{
+    width: 100%;
+    padding: 2px;
+}
+.data-body-sec .carousel .slide{
+    width:230px;
+    padding: 5px;
 }
