--- a/findly-builder/src/app/components/index/index.component.scss
+++ b/findly-builder/src/app/components/index/index.component.scss
@@ -1053,9 +1053,9 @@
 .source-field-dropdown.dropdown-menu.content-menu{
   width: 100%;
 }
-.source-field-dropdown .scroll-search-field {
-  max-height: 178px;
-}
+// .source-field-dropdown .scroll-search-field {
+//   max-height: 178px;
+// }
 .source-field-dropdown{
   transform: translate3d(0px, 34px, 0px) !important;
   padding: 0px !important;
